# mpd-gen

./: Cargo.toml  README.md
examples/: mpd_generate.rs  mpd_parse.rs
src/: common.rs  definition.rs  element.rs  entity.rs  error.rs  lib.rs  macros.rs  scheme.rs  types.rs
src/element/: adapt.rs  mpd.rs  period.rs  repr.rs  segment.rs
