[package]
name = "mpdgen"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { version = "1.0.64" }

num = { version = "0.4.3", features = ["serde"] }
iso8601 = { version = "0.6.1", features = ["serde"] }

regex = { version = "1.11.0" }

serde = { version = "1.0.210", features = ["derive"] }
serde_with = { version = "3.11.0" }

derive_builder = { version = "0.20.2" }

quick-xml = { version = "0.36.2", features = ["serialize"] }

[dev-dependencies]
serde_plain = { version = "1" }
